# UFISCAL

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: dashboard.js  index.html
data/: Penn_table_UAE_2019.csv  corporate_tax_levers.json
data/commerce_registry/: full_registry_business.csv
data/distributions/: company_size_workforce.csv  economic_activity_distribution.csv
data/macroeconomic/: advanced_parameters.json  elasticities.yaml  input_output_matrix.csv  sectoral_panel.csv
docs/: architecture_overview.md  data_requirements.md  validation_log.md
outputs_example/: example_output.json
scripts/: fastmcp_server.py  final_run.py  run_dashboard.py
src/dgce_model/: __init__.py  entities.py  ogcore_firm.py  openfisca_runner.py  sector_mapping.py
src/dgce_model/api/: api_app_final.py  behavioral_responses.py  comprehensive_analysis_enhanced.py  json_serialization.py  policy_package_schema.py  policy_simulator.py  quick_simulation_enhanced.py  sector_analyzer_enhanced.py  strategic_policy_scenarios.py  subpolicy_analyzer.py
src/dgce_model/data_loader/: advanced_calibration_manager.py  new_data_loader.py  unified_calibration_manager.py
src/dgce_model/model/: dgce_model_enhanced_fixed.py  dgce_with_dynamics.py
src/dgce_model/openfisca_core/: model_api.py
src/dgce_model/orchestration/: __init__.py  (+1 more)
tests/: conftest.py  test_comprehensive_analysis.py  test_ogcore_firm.py  test_openfisca_runner.py  test_policy_package.py  test_policy_shock_engine.py
(+39 files in other folders)
