[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "ufiscal"
version = "0.1.0"
description = "UFISCAL – UAE Fiscal Policy Simulation & Corporate Analysis Lab."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "UFISCAL Modeling Team" }
]
dependencies = [
  "flask>=3.0,<4",
  "flask-cors>=4.0,<5",
  "numpy>=2.0,<3",
  "pandas>=2.2,<3",
  "pydantic>=2.7,<3",
  "pyyaml>=6.0,<7",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: CC BY-NC License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.12,<3"]
dev = ["pytest>=8.0,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dgce_model = [
  "parameters/**/*.json",
  "parameters/**/*.yaml",
  "data/**/*.yaml",
  "data/**/*.json",
]
